--- a/package.json
+++ b/package.json
@@ -20,14 +20,17 @@
     "@types/node": "18.14.2",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
+    "autoprefixer": "^10.4.13",
     "editorconfig-checker": "^5.0.1",
     "eslint": "8.35.0",
     "eslint-config-next": "13.2.1",
     "husky": "^8.0.3",
     "lint-staged": "^13.1.2",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.4",
     "prettier-plugin-organize-imports": "^3.2.2",
     "prettier-plugin-tailwindcss": "^0.2.3",
+    "tailwindcss": "^3.2.7",
     "typescript": "4.9.5"
   },
   "engines": {
