--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,9 @@
     "src/**/*.ts",
     "src/**/*.tsx",
     "next-env.d.ts",
-    "next.config.mjs"
+    "next.config.mjs",
+    "postcss.config.js",
+    "tailwind.config.js"
   ],
   "exclude": ["node_modules"]
 }
