--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@dicebear/collection": "^5.3.4",
+    "@dicebear/core": "^5.3.4",
+    "@heroicons/react": "^2.0.16",
+    "@radix-ui/react-dialog": "^1.0.3",
+    "@radix-ui/react-dropdown-menu": "^2.0.3",
+    "@radix-ui/react-switch": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.0.3",
+    "@radix-ui/react-visually-hidden": "^1.0.2",
     "next": "13.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -31,6 +39,7 @@
     "prettier-plugin-organize-imports": "^3.2.2",
     "prettier-plugin-tailwindcss": "^0.2.3",
     "tailwindcss": "^3.2.7",
+    "tailwindcss-radix": "^2.8.0",
     "typescript": "4.9.5"
   },
   "engines": {
